# TuxExe-rs

./: .gitignore  Cargo.toml  README.md  hello.c
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
src/: lib.rs  main.rs
src/dll_manager/: loader.rs  mod.rs  search.rs
src/dxvk/: bridge.rs  build.rs  mod.rs  shim.rs
src/exceptions/: mod.rs  seh.rs  signals.rs  unwind.rs
src/filesystem/: case_fold.rs  drives.rs  mod.rs  path.rs
src/memory/: heap.rs  mod.rs  section.rs  virtual_alloc.rs
src/nt_kernel/: file.rs  memory.rs  mod.rs  objects.rs  process.rs  registry.rs  sync.rs  thread.rs
src/pe_loader/: imports.rs  mapper.rs  mod.rs  parser.rs  relocations.rs
src/registry/: defaults.rs  hive.rs  mod.rs  store.rs
src/threading/: mod.rs  scheduler.rs  teb.rs  tls.rs
src/utils/: handle.rs  mod.rs  wide_string.rs
src/win32/: mod.rs
src/win32/advapi32/: mod.rs  registry.rs
src/win32/dinput8/: mod.rs
src/win32/dsound/: mod.rs
src/win32/gdi32/: mod.rs
src/win32/kernel32/: console.rs  env.rs  error.rs  file.rs  memory.rs  mod.rs  process.rs  string.rs  sync.rs  system.rs  thread.rs  time.rs
src/win32/msvcrt/: mod.rs
src/win32/user32/: dialogs.rs  input.rs  message.rs  mod.rs  window.rs
src/win32/ws2_32/: mod.rs
src/wow64/: address_space.rs  loader.rs  mod.rs  teb32.rs  thunk.rs
tests/: phase9_pe32_e2e.rs
tests/test_binaries/: hello.c  test_threads.c
