[package]
name = "tuxexe-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["TuxExe-rs Contributors"]
description = "A Rust-based Windows PE compatibility layer for Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/tuxexe-rs"

[[bin]]
name = "tuxexe"
path = "src/main.rs"

[lib]
name = "tuxexe_rs"
path = "src/lib.rs"

[dependencies]
# PE parsing
goblin = "0.9"

# Memory management
memmap2 = "0.9"
region = "3"

# Linux syscalls / POSIX
nix = { version = "0.29", features = ["mman", "signal", "pthread", "fs"] }
libc = "0.2"

# Filesystem helpers
walkdir = "2"

# Registry storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Async (optional, for I/O completion ports emulation later)
tokio = { version = "1", features = ["full"], optional = true }
lazy_static = "1.5.0"

[features]
default = []
async = ["tokio"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
